# Electronics-Stores-Project

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: __init__.py  app_config.py  order_items_jdbc-sink-connector-v1.json  orders_jdbc-sink-connector-v1.json  s3_sink_orders.json
config/kafka-connect/: kafka-connect.properties
data/: categories.csv  fake_dim_data.py  products.csv  stores.csv
db/: create_table.py  get_db_connection.py
fake_stream_producer/: fake_order_stream.py  fake_order_stream_avro.py
kafka/: kafka.py  kafka_config.ini  main.py
minio_data/.minio.sys/: format.json
minio_data/.minio.sys/tmp/.trash/0fa7c57d-9d28-4353-973d-87dfc26c8862/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/1a172fc7-f5ae-4d48-9a33-5ec1a5f989ae/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/27c31bcc-d827-445c-93c9-cfc0f5353349/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/38c6e211-1afa-40f6-b5f0-caa20221ce10/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/39f4f165-0f9d-46b6-9436-d39f859bb099/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/3fea9c75-0a00-40e7-87e5-68d4034a1876/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/55446199-36d1-40d5-9d80-9362d5d0733d/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/5f50bb0a-002f-4f61-9700-1bf92ac4f43c/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/624f047e-fd37-4a8b-9bba-8a27944b47c6/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/982b4f43-3905-4a5e-8331-d75220a684d0/: xl.meta.bkp
minio_data/.minio.sys/tmp/.trash/9fef87a8-860c-4b96-be09-3cb4448cf6de/: xl.meta.bkp
(+1 files in other folders)
